# zklink-python

./: Dockerfile  README.md  setup.cfg  setup.py
tests/: test_contract.py  test_library.py  test_numeric_utils.py  test_signer.py  test_wallet.py
zklink_sdk/: __init__.py  contract_utils.py  ethereum_provider.py  lib.py  network.py  serializers.py  utils.py  wallet.py  zklink.py  zklink_signer.py
zklink_sdk/contract_abi/: ZkLink.json
zklink_sdk/ethereum_signer/: interface.py  web3.py
zklink_sdk/transport/: http.py
zklink_sdk/types/: __init__.py  auth_types.py  responses.py  signatures.py  transactions.py
zklink_sdk/zklink_provider/: batch_builder.py  error.py  interface.py  transaction.py  v01.py
