[metadata]
name = zklink_sdk
description = SDK for using zklink
long_description = file: README.rst
author = MatterLabs
url = https://zk.link
license = MIT

[options]
packages = find:
install_requires =
	idna >= 2.8
	web3 >= 5.16
	httpx >= 0.16
	pydantic >= 1.7
python_requires = >=3.8
setup_requires =
	setuptools_scm>=3.5.0

[options.extras_require]
test =
    mypy >= 0.8

[options.packages.find]
include =
   	zklink_sdk
    zklink_sdk.*

[options.package_data]
zklink_sdk =
    py.typed
zklink_sdk.contract_abi =
    IERC20.json
    ZkLink.json

[tox:tox]
envlist = py{38,39},mypy

[testenv:py{38,39}]
deps = coverage
commands = coverage run -m unittest

[testenv:mypy]
extras = test
commands = mypy .

[mypy]
show_error_codes = True
no_implicit_optional = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-eth_account.*]
ignore_missing_imports = True
